# buf_proto_prefix_mapping

./: .bazelrc  BUILD  MODULE.bazel  README.md  buf.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
proto/example/: BUILD  package.json
proto/example/v1/: BUILD  greeter.proto
tools/: BUILD  package.json
tools/toolchains/: BUILD
