# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)  # force a recent version that works with v3
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")
bazel_dep(name = "rules_buf", version = "0.5.2")

git_override(
    module_name = "aspect_rules_js",
    commit = "a413051cac3072a8eb72ce074fa80c1b82a9d41b",
    remote = "https://github.com/aspect-build/rules_js.git",
)

#########################
# Protobuf and gRPC
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "protovalidate", version = "1.0.0")

# Force later resolutions of some transitives to pick up Bazel 9 fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1", repo_name = None)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.65.0")

# See https://buf.build/docs/build-systems/bazel#buf-dependencies
# NB: it's gross that we repeat these here, the buf lock file should be used instead
buf.dependency(module = "buf.build/envoyproxy/protoc-gen-validate:eac44469a7af47e7839a7f1f3d7ac004")
buf.dependency(module = "buf.build/acme/petapis:7abdb7802c8f4737a1a23a35ca8266ef")
buf.dependency(module = "buf.build/acme/paymentapis:9a877cf260e1488d869a31fce3bea26d")
buf.dependency(module = "buf.build/googleapis/googleapis:004180b77378443887d3b55cabc00384")

# Allow references to labels under @buf_deps and @rules_buf_toolchains//:buf
use_repo(buf, "buf_deps", "rules_buf_toolchains")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.47.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

# Bazel 9: Ensure transitives don't depend on rules_nodejs prior to
# https://github.com/bazel-contrib/rules_nodejs/commit/1fc6b6b763c4f79994edc9edab10399f7446d8be
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.3")

#########################
# JavaScript and pnpm package manager
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//:.nvmrc")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version_from = "//:package.json")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

register_toolchains("//tools/toolchains:all")
